Update MONGO_URI in .env to use placeholders
Replaced sensitive database credentials with placeholders.

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://oguzbatu2934_db_user:w9vjsbD855H1meI1@cluster0.kejl8qw.mongodb.net/?appName=Cluster0
+MONGO_URI=mongodb+srv://<DB_USER>:<DB_PASS>@cluster0.kejl8qw.mongodb.net/?appName=Cluster0
